--- a/SensorMax/bin/AndroidManifest.xml
+++ b/SensorMax/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="2.0" >
 
     <uses-sdk
-        android:minSdkVersion="13"
+        android:minSdkVersion="14"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -20,7 +20,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" 
-        android:persistent="true">
+        android:persistent="true"
+        android:largeHeap = "true">
         <activity
             android:name="com.deeps.sensormax.model.activities.DataHandlerActivity"
             android:configChanges="orientation|screenSize"
